--- a/pages/about-us.html
+++ b/pages/about-us.html
@@ -81,22 +81,21 @@
           <a href="#" class="read_more"><button class="btn">CONSULTE MAIS INFORMAÇÕES</button></a>
         </section>
         <div class="solucoes">
-            <div class="solucao solucao-1">
-              <div class="count-digit">945</div>
-              <div class="count-title">Work Hours</div>
-            </div>
-            <div class="solucao solucao-2">
-              <div class="count-digit">1280</div>
-              <div class="count-title">Great Reviews</div>
-            </div>
-            <div class="solucao solucao-3">
-              <div class="count-digit">578</div>
-              <div class="count-title">Projects Done</div>
-            </div>
-            <div class="solucao solucao-4">
-              <div class="count-digit">26</div>
-              <div class="count-title">Awards Won</div>
-            </div>
+          <div class="solucao solucao-1">
+            <div class="count-digit">945</div>
+            <div class="count-title">Horas de trabalho</div>
+          </div>
+          <div class="solucao solucao-2">
+            <div class="count-digit">1280</div>
+            <div class="count-title">Ótimas avaliações</div>
+          </div>
+          <div class="solucao solucao-3">
+            <div class="count-digit">578</div>
+            <div class="count-title">Projetos Concluídos</div>
+          </div>
+          <div class="solucao solucao-4">
+            <div class="count-digit">26</div>
+            <div class="count-title">Prêmios ganhos</div>
           </div>
     </section>
     <section class="testemunhos">
@@ -126,9 +125,8 @@
       <footer class="end">
         <div class="text002">
           <h4>Finance Business</h4>
-          <p>Vivamus tellus mi. Nulla ne cursus 
-          <br>elit,vulputate. Sed ne cursus augue
-          <br>hasellus lacinia sapien vitae.</p>
+          <p>Somos a Finance Business, <br> uma empresa prestadora de serviços.
+          <br>A nossa prioridade é a satisfação <br> dos nossos clientes</p>
         </div>
         <div class="text003">
           <h4>Páginas adicionais</h4>
@@ -156,5 +154,8 @@
         <button type="submit" id="form-submit1" class="btn">ENVIAR MENSAGEM</button>
       </section>
     </footer>
-    <span class="cp">Copyright &copy; 2023 - Finance Business, Ltd</span>
-</body>
+    <div class="copy">
+      <span class="cp">Copyright &copy; 2023 - Finance Business, Ltd</span>
+    </div>
+  </body>
+</html>
