--- a/pages/contact-us.html
+++ b/pages/contact-us.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../pages/about-us.css">
+    <link rel="stylesheet" href="../pages/contact-us.css">
+    <script src="https://kit.fontawesome.com/22973e8b29.js" crossorigin="anonymous"></script>
     <script src="script.js/script.js"></script>
     <title>Finance Business</title>
 </head>
@@ -24,8 +25,100 @@
     <main class="cont-about"> <!-- Segunda parte -->
         <section class="cont">
             <section class="item">
-                <h2>Sobre Nós</h2>
-                <p>TEMOS MAIS DE 20 ANOS DE EXPERIÊNCIA</p>
+                <h2>Contacte-Nos</h2>
+                <p>SINTA-SE À VONTADE PARA NOS ENVIAR UMA MENSAGEM AGORA!</p>
             </section>
         </section>
     </main>
+    <section class="contato">
+        <div class="contato1">
+            <div class="mobile">
+                <span><i class="fa-solid fa-phone"></i></span>
+                <p>
+                <h3 class="mob-wd">Telefone</h3>
+                </p>
+                <a href="#">
+                    <p>+244922581171</p>
+                </a>
+            </div>
+            <div class="email">
+                <span><i class="fa-regular fa-envelope"></i></span>
+                <h3 class="mail-word">E-mail</h3>
+                <a href="#">
+                    <p>info@company.com</p>
+                </a>
+            </div>
+            <div class="location">
+                <span><i class="fas fa-map-marker-alt"></i></span>
+                <h3 class="loc-word">Localização</h3>
+                <p>1020 New Mountain Street</p>
+                <p>Forest Park, FP 11220</p>
+                <a href="#">Ver google map</a>
+            </div>
+        </div>
+        </section>
+        <section class="request">
+            <h4 class="req001">Solicitar uma <em>chamada de volta</em></h4>
+            <section class="form">
+                <section class="form001">
+                    <div class="form001">
+                        <form action="post">
+                            <input type="text" name="" id="" placeholder="Nome completo" required>
+                    </div>
+                    <div class="form001">
+                        <form action="post">
+                            <input type="text" name="" id="" pattern="[^ @]*@[^ @]" placeholder="Endereço de e-mail"
+                                required>
+                    </div>
+                    <div class="form001">
+                        <form action="post">
+                            <input type="text" name="" id="" placeholder="Assunto a requisitar" required>
+                    </div>
+                </section>
+                <div class="form001">
+                    <form action="post">
+                        <input type="text" name="" rows="6" id="" placeholder="Sua mensagem" required>
+                </div>
+                <button type="submit" id="form-submit" class="btn">ENVIAR MENSAGEM</button>
+            </section>
+        </section>
+        <footer class="end">
+            <div class="text002">
+                <h4>Finance Business</h4>
+                <p>Vivamus tellus mi. Nulla ne cursus
+                    <br>elit,vulputate. Sed ne cursus augue
+                    <br>hasellus lacinia sapien vitae.
+                </p>
+            </div>
+            <div class="text003">
+                <h4>Páginas adicionais</h4>
+                <ul class="menu-list">
+                    <li><a href="/pages/about-us.html">Sobre nós</a></li>
+                    <li><a href="#">Como trabalhamos</a></li>
+                    <li><a href="#">Suporte rápido</a></li>
+                    <li><a href="/pages/contact-us.html">Contacte-Nos</a></li>
+                    <li><a href="#">Políticas de Privacidades</a></li>
+                </ul>
+            </div>
+            <section class="form1">
+                <div class="form01">
+                    <form action="post">
+                        <input type="text" name="" id="" placeholder="Nome completo" required>
+                </div>
+                <div class="form01">
+                    <form action="post">
+                        <input type="text" name="" id="" pattern="[^ @]*@[^ @]" placeholder="Endereço de e-mail"
+                            required>
+                </div>
+                <div class="form01">
+                    <form action="post">
+                        <input type="text" name="" rows="6" id="" placeholder="Sua mensagem" required>
+                </div>
+                <button type="submit" id="form-submit1" class="btn">ENVIAR MENSAGEM</button>
+            </section>
+        </footer>
+        <div class="copy">
+            <span class="cp">Copyright &copy; 2023 - Finance Business, Ltd</span>
+        </div>
+    </body>
+</html>
