--- a/pages/our-service.html
+++ b/pages/our-service.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -32,32 +31,42 @@
         </section>
     </main>
     <section class="serv">
-        <div class="img0">
-            <div class="image1">
-                <img src="/images/single_service_01.jpg" alt="">
-            </div>
-            <h4>Aálise de Mercado</h4>
-            <div class="image2">
-                <img src="/images/single_service_02.jpg" alt="">
-            </div>
-            <h4>Dados Fincanceiros</h4>
+        <section class="serv00">
+        <div class="image0">
+            <img src="/images/single_service_01.jpg" alt="">
+            <p><h4 class="te0">Análise de Mercado</h4></p>
+            <p class="te00">A análise de mercado é um dos pontos principais <br> para um bom plano de negócios.
+            <br>É a partir dela que você conseguirá entender <br> as necessidades do seu público alvo,
+            <br>os melhores fornecedores e terá um perfil da <br> concorrência,
+            para poder analisar seus pontos fortes e fracos.</p>
         </div>
-        <div class="img1">
-            <div class="image3">
+        <div class="image0">
+            <img src="/images/single_service_02.jpg" alt="">
+            <p><h4 class="te0">Dados Fincanceiros</h4></p>
+            <p class="te00">E os dados financeiros são a “matéria-prima”
+            <br>para guiar empresas no caminho do sucesso.</p>
+        </div>
+        </section>
+        <section class="serv01">
+            <div class="image0">
                 <img src="/images/single_service_03.jpg" alt="">
+                <p><h4 class="te0">Serviço de Contabilidade</h4></p>
+                <p class="te00">São vários os serviços contábeis prestados
+                <br>por um escritório de contabilidade — da abertura de
+                <br>empresa até assessoria à gestão financeira.</p>
             </div>
-            <h4>Serviço de Conta</h4>
-            <div class="image4">
+            <div class="image0">
                 <img src="/images/single_service_04.jpg" alt="">
+                <p><h4 class="te0">Avaliação geral</h4></p>
+                <p class="te00">O contador geral faz a apuração do resultado global,
+                <br>verificando as receitas e as despesas.</p>
             </div>
-            <h4>Overall Evaluation</h4>
-        </div>
+        </section>
     </section>
     <hr>
     <footer>
         <section class="request">
             <h4 class="req001">Solicitar uma <em>chamada de volta</em></h4>
-            <span class="text001">TAMBÉM É TOMADA ANTES DOS RESULTADOS DO ÓDIO</span>
             <section class="form">
                 <section class="form001">
                     <div class="form001">
@@ -116,5 +125,8 @@
                 <button type="submit" id="form-submit1" class="btn">ENVIAR MENSAGEM</button>
             </section>
         </footer>
-    <span class="cp">Copyright &copy; 2023 - Finance Business, Ltd</span>
-</body>
+        <div class="copy">
+            <span class="cp">Copyright &copy; 2023 - Finance Business, Ltd</span>
+        </div>
+    </body>
+    </html>
