--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -71,7 +70,6 @@
           futuros).</p>
         <a href="#" class="read_more"><button class="btn">CONSULTE MAIS INFORMAÇÕES</button></a>
       </div>
-
     </div>
   </section>
   <section class="textos">
@@ -99,19 +97,19 @@
     <div class="solucoes">
       <div class="solucao solucao-1">
         <div class="count-digit">945</div>
-        <div class="count-title">Work Hours</div>
+        <div class="count-title">Horas de trabalho</div>
       </div>
       <div class="solucao solucao-2">
         <div class="count-digit">1280</div>
-        <div class="count-title">Great Reviews</div>
+        <div class="count-title">Ótimas avaliações</div>
       </div>
       <div class="solucao solucao-3">
         <div class="count-digit">578</div>
-        <div class="count-title">Projects Done</div>
+        <div class="count-title">Projetos Concluídos</div>
       </div>
       <div class="solucao solucao-4">
         <div class="count-digit">26</div>
-        <div class="count-title">Awards Won</div>
+        <div class="count-title">Prêmios ganhos</div>
       </div>
 
     </div>
@@ -141,7 +139,7 @@
     <section class="test001">
         <div class="test002">
           <h4 class="position">José António</h4>
-          <span>Analista Fincanceiro Chefe</span>
+          <span>Analista Financeiro Chefe</span>
           <p>"Nulla ullamcorper, ipsum vel condimentum congue, <br>
             mi odio vehicula tellus, sit amet malesuada justo sem <br>
             sit amet quam. Pellentesque in sagittis lacus."</p>
@@ -157,7 +155,6 @@
   </section>
   <section class="request">
     <h4 class="req001">Solicitar uma <em>chamada de volta</em></h4>
-    <span class="text001">TAMBÉM É TOMADA ANTES DOS RESULTADOS DO ÓDIO</span>
     <section class="form">
       <section class="form001">
         <div class="form001">
@@ -183,9 +180,8 @@
   <footer class="end">
       <div class="text002">
         <h4>Finance Business</h4>
-        <p>Vivamus tellus mi. Nulla ne cursus 
-        <br>elit,vulputate. Sed ne cursus augue
-        <br>hasellus lacinia sapien vitae.</p>
+        <p>Somos a Finance Business, <br> uma empresa prestadora de serviços.
+        <br>A nossa prioridade é a satisfação <br> dos nossos clientes</p>
       </div>
       <div class="text003">
         <h4>Páginas adicionais</h4>
@@ -213,6 +209,8 @@
       <button type="submit" id="form-submit1" class="btn">ENVIAR MENSAGEM</button>
     </section>
   </footer>
-  <span class="cp">Copyright &copy; 2023 - Finance Business, Ltd</span>
+  <div class="copy">
+    <span class="cp">Copyright &copy; 2023 - Finance Business, Ltd</span>
+  </div>
 </body>
 </html>
