--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="/style.css/style.css">
+  <link rel="shortcut icon" href="/finac.ico" type="image/x-icon">
   <script src="script.js/script.js"></script>
   <title>Finance Business</title>
 </head>
