--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>
   <header>
-    <h1>FINANCE BUSINESS</h1>
+    <a href="index.html"><h1>FINANCE BUSINESS</h1></a>
     <nav>
       <ul>
         <li><a href="index.html">Início</a></li>
@@ -154,7 +154,7 @@
         </div>
     </section>
   </section>
-  <section class="request">
+  <!--<section class="request">
     <h4 class="req001">Solicitar uma <em>chamada de volta</em></h4>
     <section class="form">
       <section class="form001">
@@ -177,7 +177,7 @@
       </div>
       <button type="submit" id="form-submit" class="btn">ENVIAR MENSAGEM</button>
     </section>
-  </section>
+  </section>-->
   <footer class="end">
       <div class="text002">
         <h4>Finance Business</h4>
