--- a/pages/about-us.html
+++ b/pages/about-us.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header>
-        <h1>FINANCE BUSINESS</h1>
+      <a href="/index.html"><h1>FINANCE BUSINESS</h1></a>
         <nav>
             <ul>
                 <li><a href="../index.html">Início</a></li>
@@ -59,7 +59,7 @@
                   arcu id ornare malesuada, est nulla luctus nisi."</p>
               </div>
         </section>
-    </section>
+    <!--</section>
     <section class="textos">
         <section class="textos-left">
           <h4 class="texto-1">A nossa prioridade é a satisfação dos nossos clientes</h4>
@@ -153,9 +153,9 @@
         </div>
         <button type="submit" id="form-submit1" class="btn">ENVIAR MENSAGEM</button>
       </section>
-    </footer>
+    </footer>-->
     <div class="copy">
       <span class="cp">Copyright &copy; 2023 - Finance Business, Ltd</span>
-    </div>
+  </div>
   </body>
 </html>
