--- a/pages/our-service.html
+++ b/pages/our-service.html
@@ -11,7 +11,7 @@
 
 <body>
     <header>
-        <h1>FINANCE BUSINESS</h1>
+        <a href="/index.html"><h1>FINANCE BUSINESS</h1></a>
         <nav>
             <ul>
                 <li><a href="../index.html">Início</a></li>
@@ -64,7 +64,7 @@
         </section>
     </section>
     <hr>
-    <footer>
+    <!--<footer>
         <section class="request">
             <h4 class="req001">Solicitar uma <em>chamada de volta</em></h4>
             <section class="form">
@@ -90,7 +90,7 @@
                 <button type="submit" id="form-submit" class="btn">ENVIAR MENSAGEM</button>
             </section>
         </section>
-        <footer class="end">
+        <!--<footer class="end">
             <div class="text002">
                 <h4>Finance Business</h4>
                 <p>Vivamus tellus mi. Nulla ne cursus
@@ -124,7 +124,7 @@
                 </div>
                 <button type="submit" id="form-submit1" class="btn">ENVIAR MENSAGEM</button>
             </section>
-        </footer>
+        </footer>-->
         <div class="copy">
             <span class="cp">Copyright &copy; 2023 - Finance Business, Ltd</span>
         </div>
